syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "internal/domain/grpc_gen";

message User {
  int64 id  = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string first_name = 5;
  string middle_name = 6;
  string last_name = 7;
  string mobile = 8;
  string phone = 9;
  bool active = 10;
  google.protobuf.Timestamp createdAt = 11;
  google.protobuf.Timestamp updatedAt = 12;
  google.protobuf.Timestamp deletedAt = 13;
}

message UserCreate {
  string username = 1;
  string email = 2;
  string password = 3;
  string confirmPassword = 4;
}

message CreateUserRequest {
  UserCreate user = 1;
}
message CreateUserResponse {
  string token = 1;
}

message GetUserRequest {
  int32 user_num = 1;
}

message GetUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int32 user_num = 1;
}

message DeleteUserResponse {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser (GetUserRequest) returns (GetUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);

  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
        post: "/api/auth/login"
        body: "*"
      };
  };
  rpc Logout (LoginRequest) returns (LoginResponse);
}
